# rust-swfp

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
ci/: build-and-test.sh  build-no_std.sh  check-generator.sh  clippy.sh  extract-changelog.sh  get-release-version.sh  lint-aux.sh  package-crate.sh  publish-crate.sh
generator/: Cargo.toml
generator/src/: main.rs  test_data.rs
src/: f128.rs  f8e4m3b8nnz.rs  f8e4m3nao.rs  f8e5m2.rs  ieee_float.rs  int.rs  lib.rs  math.rs  simple_fp.rs  traits.rs  uint192.rs  utils.rs  x87f80.rs
src/core_num/: bignum.rs  diy_float.rs  fmt.rs  fmt_float.rs  mod.rs  numfmt.rs
src/f16/: cbrt.rs  exp.rs  gamma.rs  hyperbolic.rs  inv_hyperbolic.rs  inv_trigonometric.rs  log.rs  mod.rs  pow.rs  trigonometric.rs
src/f32/: cbrt.rs  exp.rs  gamma.rs  hyperbolic.rs  inv_hyperbolic.rs  inv_trigonometric.rs  log.rs  mod.rs  pow.rs  trigonometric.rs
src/f64/: cbrt.rs  exp.rs  gamma.rs  hyperbolic.rs  inv_hyperbolic.rs  inv_trigonometric.rs  log.rs  mod.rs  pow.rs  trigonometric.rs
src/generic/: cbrt.rs  exp.rs  gamma.rs  hyperbolic.rs  inv_hyperbolic.rs  inv_trigonometric.rs  log.rs  mod.rs  pow.rs  trigonometric.rs
src/math_aux/: mod.rs  reduce_pi_2_large.rs  sfpm128e16.rs  sfpm192e16.rs  sfpm32e16.rs  sfpm64e16.rs
test-data/: README.md
test-data/f32/: acos.txt  acosd.txt  acosh.txt  acospi.txt  asin.txt  asind.txt  asinh.txt  asinpi.txt  atan.txt  atand.txt  atanh.txt  atanpi.txt  cos.txt  cosh.txt  exp.txt  exp10.txt  exp10_m1.txt  exp2.txt  exp2_m1.txt  exp_m1.txt  gamma.txt  ln.txt  ln_1p.txt  (+9 more)
(+72 files in other folders)
